# ChangeLog for net-mail/mailwrapper
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/mailwrapper/ChangeLog,v 1.38 2008/07/09 06:41:02 tove Exp $

  09 Jul 2008; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove g2boojum from metadata (#208353)

  03 Feb 2008; Fabian Groffen <grobian@gentoo.org> mailwrapper-0.2.1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  12 Jun 2007; Marius Mauch <genone@gentoo.org> mailwrapper-0.2.1.ebuild:
  Replacing einfo with elog

  29 Mar 2007; Timothy Redaelli <drizzt@gentoo.org>
  mailwrapper-0.2.1.ebuild:
  Add ~x86-fbsd keyword

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org>
  mailwrapper-0.2.1-r1.ebuild:
  Added ~sparc-fbsd keyword.

  06 Jul 2006; Emanuele Giaquinta <exg@gentoo.org> mailwrapper-0.2.1.ebuild:
  Add ~ppc-macos keyword.

  10 May 2006; Fernando J. Pereda <ferdy@gentoo.org>
  mailwrapper-0.2.1-r1.ebuild:
  Install /usr/bin/sendmail also. See bug #132941

  06 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  mailwrapper-0.2.1-r1.ebuild:
  Add ~x86-fbsd keyword.

  29 Jul 2005; MATSUU Takuto <matsuu@gentoo.org> mailwrapper-0.2.1.ebuild:
  Stable on sh.

  04 Jul 2005; Andrej Kacian <ticho@gentoo.org> mailwrapper-0.2.1-r1.ebuild:
  Install also as /usr/bin/rmail. Bug #97589.

  16 May 2005; Grant Goodyear <g2boojum@gentoo.org> -mailwrapper-0.1.ebuild:
  Remove old ebuild.

  16 May 2005; Andrej Kacian <ticho@gentoo.org> mailwrapper-0.1.ebuild,
  mailwrapper-0.2.1.ebuild, mailwrapper-0.2.1-r1.ebuild:
  Inherit toolchain-funcs.eclass instead of gcc.eclass. Bug #92745.

  26 Apr 2005; Fernando J. Pereda <ferdy@gentoo.org>
  mailwrapper-0.2.1-r1.ebuild:
  add dodir and fix symlinks

  26 Apr 2005; Fernando J. Pereda <ferdy@gentoo.org>
  mailwrapper-0.2.1-r1.ebuild:
  Add /usr/lib/sendmail symlink

*mailwrapper-0.2.1-r1 (25 Apr 2005)
