@@ -1,5 +1,5 @@
 AUX mailwrapper-0.2.1-prefix.patch 424 RMD160 c6085d7289a1ad8676be9e4c277ad9d661b842e4 SHA1 77808efbfa916acfc0d67b165843c92714761fd1 SHA256 2604c1486e9902fd777e9a6496a8d74d8fb850f6ce7eea417665657d5bc93814
 DIST mailwrapper-0.2.1.tbz2 6461 RMD160 f61d6a6de8ade7a064482210ec744f408948cd8c SHA1 7b0ed9b13efac8dd36dd6f9c85f2b51eda7b5906 SHA256 2eba38b83d2bdfe05d3ec937851657c616eacc5ec66c061cb85b870c3e575844
-EBUILD mailwrapper-0.2.1-r1.ebuild 1125 RMD160 ea8e594b6726ccc06bf42751160bb05336862a44 SHA1 2a6a3da268e2c66fa247ea2c295dcaccefc3b15a SHA256 c8a50e518590ff555ab575b1f1717953b72cafe88304cb9c0bcc599ad9d1fb16
-MISC ChangeLog 4809 RMD160 e2f1ac0958acba04bb7a73d329c4c9379b648786 SHA1 71593dca4e1c0ebb70c8570c3a93988c9b3fa083 SHA256 29368dd495f73b474e092e9f4ecb6b74ad8f100e939c4112d0cd3c495db0baca
+EBUILD mailwrapper-0.2.1-r1.ebuild 1179 RMD160 19846719b03f63d2a3e2b3fc1cd7fc452e9633fb SHA1 7ce50d82e4177bd57d1548d5b0e1846fdcfdc5bd SHA256 5842ffe5e6b4901ac3f02a4d667fc0b006eb75fc4dc65571b5022a7750367a2d
+MISC ChangeLog 4984 RMD160 76a4a089091198844d7b941b10b95cc0e474c4f7 SHA1 2d6ee2aa4d18d0f2f1fed7f8bdc41a5f26a1d2b9 SHA256 a06e7cf7e78dfd165c0f302c819c9f04bf2a3b3408fef4cb29968e0fd2e482e8
 MISC metadata.xml 161 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 SHA1 a1fecd2f7b169d621b88c6ccab9d758209fc8f19 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32
