@@ -1,8 +1,8 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/mailwrapper/mailwrapper-0.2.1-r1.ebuild,v 1.11 2006/10/17 10:56:50 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/mailwrapper/mailwrapper-0.2.1-r1.ebuild,v 1.12 2009/04/21 04:06:48 vapier Exp $
 
-inherit toolchain-funcs prefix
+inherit eutils toolchain-funcs prefix
 
 DESCRIPTION="Program to invoke an appropriate MTA based on a config file"
 HOMEPAGE="http://www.gentoo.org/"
@@ -13,17 +13,16 @@ SLOT="0"
 KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos"
 IUSE=""
 
-DEPEND=""
-
 src_unpack() {
 	unpack ${A}
 	cd "${S}"
+	epatch "${FILESDIR}"/${P}-headers.patch #265616
 	epatch "${FILESDIR}"/${P}-prefix.patch
 	eprefixify mailwrapper.c
 }
 
 src_compile() {
-	$(tc-getCC) ${CFLAGS} \
+	$(tc-getCC) ${CFLAGS} ${LDFLAGS} \
 		-o mailwrapper \
 		mailwrapper.c fparseln.c fgetln.c \
 		|| die "build failed"
